# SimpleRayTracing-with-SDL2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
libs/SDL2/: CMakeLists.txt
libs/cg_math/: CMakeLists.txt
libs/cg_math/include/: cg_math.h
libs/cg_math/src/: cg_math.cpp
libs/simple_cg/: CMakeLists.txt
libs/simple_cg/include/: cg_SDLwraper.h  cg_interaction.h  cg_structure.h  simple_cg.h
libs/simple_cg/src/: cg_SDLwraper.cpp  cg_interaction.cpp  cg_interation.cpp  cg_structure.cpp  simple_cg.cpp
src/: BasicRayTracing.cpp  DirectLight.cpp  HardShadows.cpp  RecursiveReflection.cpp  SDL2_test.cpp  SDL2_test2.cpp
